Fix clipped text peeking out on mobile

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -41,7 +41,7 @@
   .podcast {
     @media (max-width: 768px) {
       max-width: 35vw;
-      max-height: 50vw;
+      max-height: 49.5vw;
       img {
         width: 35vw;
         height: 35vw;
